# autoservice

./: docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_06_25_2127-5f707e31622e_add_user_car_order_models.py  2025_06_25_2129-dd44e2e3721c_add_user_car_order_models.py
app/core/: config.py  database.py  logger.py  security.py
app/crud/: client.py  dashboard.py  orders.py  spare_part.py  user.py
app/models/: __init__.py  car.py  client.py  order.py  spare_part.py  user.py
app/routers/: __Init__.py  auth.py  clients.py  index.py  orders.py  warehouse.py
app/schemas/: user.py
app/templates/: base.html  clients.html  dashboard.html  login.html  orders.html  warehouse.html
app/templates/components/: navigateMenu.html
